--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.5",
