--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "zustand": "^4.3.2"
-  },
-  "devDependencies": {
+    "zustand": "^4.3.2",
     "@emotion/babel-plugin": "^11.10.5",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@types/node": "18.11.18",
@@ -32,13 +30,15 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.1.0",
-    "generate-react-cli": "^8.2.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
-    "tailwindcss-debug-screens": "^2.2.1",
     "twin.macro": "^3.1.0"
+  },
+  "devDependencies": {
+    "tailwindcss-debug-screens": "^2.2.1",
+    "generate-react-cli": "^8.2.0"
   }
 }
