--- a/package.json
+++ b/package.json
@@ -10,35 +10,36 @@
     "c": "generate-react component"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.10.5",
     "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.4",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
-    "next": "13.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "zustand": "^4.3.2",
-    "@emotion/babel-plugin": "^11.10.5",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.2.5",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.1.0",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.4",
+    "next": "13.1.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
-    "twin.macro": "^3.1.0"
+    "twin.macro": "^3.1.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
-    "tailwindcss-debug-screens": "^2.2.1",
-    "generate-react-cli": "^8.2.0"
+    "generate-react-cli": "^8.2.0",
+    "tailwindcss-debug-screens": "^2.2.1"
   }
 }
