--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "sass": "^1.57.1",
