--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.1.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "json2csv": "^6.0.0-alpha.2",
     "next": "13.1.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
