--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
     "next": "13.1.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
+    "puppeteer": "^19.6.3",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "request": "^2.88.2",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
+    "swr": "^2.0.3",
     "tailwindcss": "^3.2.4",
     "twin.macro": "^3.1.0",
     "zustand": "^4.3.2"
