--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "chrome-aws-lambda": "^10.1.0",
+    "chromium": "^3.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
     "next": "13.1.4",
     "next-themes": "^0.2.1",
+    "playwright-core": "^1.30.0",
     "postcss": "^8.4.21",
     "puppeteer": "^19.6.3",
     "react": "18.2.0",
