--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.1.0",
     "cheerio": "^1.0.0-rc.12",
-    "chrome-aws-lambda": "^10.1.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
@@ -35,6 +34,8 @@
     "next-themes": "^0.2.1",
     "playwright-core": "^1.30.0",
     "postcss": "^8.4.21",
+    "puppeteer": "^19.6.3",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
