--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "generate-react-cli": "^8.2.0",
     "tailwindcss-debug-screens": "^2.2.1"
   }
