--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
-    "next": "13.1.4",
+    "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "playwright-core": "^1.30.0",
     "postcss": "^8.4.21",
