--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.1",
     "json2csv": "^6.0.0-alpha.2",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
