--- a/package.json
+++ b/package.json
@@ -11,21 +11,15 @@
     "c": "generate-react component"
   },
   "dependencies": {
-    "@emotion/babel-plugin": "^11.10.5",
-    "@emotion/css": "^11.10.5",
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.4",
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.5",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
@@ -35,8 +29,6 @@
     "next-themes": "^0.2.1",
     "playwright-core": "^1.30.0",
     "postcss": "^8.4.21",
-    "puppeteer": "^19.6.3",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
@@ -51,7 +43,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "generate-react-cli": "^8.2.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
     "tailwindcss-debug-screens": "^2.2.1"
   }
 }
