--- a/package.json
+++ b/package.json
@@ -16,15 +16,10 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.5",
     "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "babel-plugin-twin": "^1.1.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4",
     "express": "^4.18.2",
     "framer-motion": "^10.16.1",
-    "json2csv": "^6.0.0-alpha.2",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "playwright-core": "^1.30.0",
@@ -35,16 +30,16 @@
     "react-icons": "^4.7.1",
     "request": "^2.88.2",
     "sass": "^1.57.1",
-    "styled-components": "^5.3.6",
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.4",
-    "twin.macro": "^3.1.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
-    "tailwindcss-debug-screens": "^2.2.1"
+    "tailwindcss-debug-screens": "^2.2.1",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.4"
   }
 }
