--- a/package.json
+++ b/package.json
@@ -7,28 +7,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "c": "generate-react component"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.4",
     "@nextui-org/react": "^1.0.0-beta.12",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.5",
-    "babel-plugin-macros": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "framer-motion": "^10.16.1",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
-    "playwright-core": "^1.30.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "request": "^2.88.2",
     "sass": "^1.57.1",
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.4",
