--- a/puppeteer-server/package.json
+++ b/puppeteer-server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "puppeteer": "^19.7.2"
